# Softwater

./: CMakeLists.txt  README.md  key.txt
Benchmarks/BenchmarkGame/: n-body.c  nsieve-bits.c  recursive.c
Benchmarks/Shootout/: sieve.c.ll.unwater
Benchmarks/custom/: createReaderFile.sh  ioreader_getline.cpp  ioreader_getline.reference_output  iowriter_high.cpp  matmul.c
Tests/: almabench.ll  clear_database.sh  export_measurement.py  info_measurement.py  list_measurements.py  results.db  results.sql  test  test.py  test.wm.ll
Tests/BenchmarkGame/BenchmarkGame/: fannkuch.c
Tests/BenchmarkGame/CoyoteBench/: almabench.c
Tests/BenchmarkGame/Misc/: fbench.c
Tests/BenchmarkGame/custom/: ioread_write.cpp  ioreader_fgets.cpp  iowriter_low.cpp  matmul.reference_output
Tests/Regression/C/: DuffsDevice.c  PR10189.c
Tests/UnitTests/: 2002-12-13-MishaTest.c  2007-01-04-KNR-Args.c  AtomicOps.c
Tests/UnitTests/Integer/: template3.cpp  template3.reference_output
Tests/c-testsuite/: README.md
number-theory/: CMakeLists.txt  extractor.py  extractor.py.backup  test.sh
number-theory/Watermark/Transforms/WatermarkEmbedderPass/: CMakeLists.txt  WatermarkEmbedderPass.cpp
number-theory/Watermark/Transforms/WatermarkEmbedderPass/includes/: LoopAnalysis.cpp  LoopInsertion.cpp  WatermarkGenerator.cpp  WatermarkGenerator.h
path-based/: CMakeLists.txt  test.sh  test_branches.c  thesis.txt
path-based/llvm_pass/: WMBranchFunction.cpp  WMBranchFunction.h  WMBranchFunctionAlt.cpp  WMBranchFunctionAlt.h  WMBranchFunctionEmbed.cpp  WMBranchFunctionEmbed.h  WMBranchFunction_old.cpp  extract.py
path-based/python/: README.md  embed.py  extract.py
rpgmark/: CMakeLists.txt  embedder.cpp  extractor.cpp  graph_matcher.cpp  graph_matcher.hpp  paper.md  rpg.cpp  rpg.hpp  sip.cpp  sip.hpp  test.cpp  test.sh
semacall/: AtoiPatcher.hpp  CMakeLists.txt  FunctionPatcher.hpp  GetsPatcher.hpp  Polynoms.hpp  SemaCall.cpp  TimePatcher.hpp  test.sh
sidedata/: CMakeLists.txt  SideData.cpp  SideData.hpp  test.sh
